qt/gen_qundogroup.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qundogroup.cpp", cflags).}


import gen_qundogroup_types
export gen_qundogroup_types

import
  gen_qaction,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qundostack
export
  gen_qaction,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qundostack

type cQUndoGroup*{.exportc: "QUndoGroup", incompleteStruct.} = object

proc fcQUndoGroup_new(): ptr cQUndoGroup {.importc: "QUndoGroup_new".}
proc fcQUndoGroup_new2(parent: pointer): ptr cQUndoGroup {.importc: "QUndoGroup_new2".}
proc fcQUndoGroup_metaObject(self: pointer, ): pointer {.importc: "QUndoGroup_metaObject".}
proc fcQUndoGroup_metacast(self: pointer, param1: cstring): pointer {.importc: "QUndoGroup_metacast".}
proc fcQUndoGroup_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QUndoGroup_metacall".}
proc fcQUndoGroup_tr(s: cstring): struct_miqt_string {.importc: "QUndoGroup_tr".}
proc fcQUndoGroup_trUtf8(s: cstring): struct_miqt_string {.importc: "QUndoGroup_trUtf8".}
proc fcQUndoGroup_addStack(self: pointer, stack: pointer): void {.importc: "QUndoGroup_addStack".}
proc fcQUndoGroup_removeStack(self: pointer, stack: pointer): void {.importc: "QUndoGroup_removeStack".}
proc fcQUndoGroup_stacks(self: pointer, ): struct_miqt_array {.importc: "QUndoGroup_stacks".}
proc fcQUndoGroup_activeStack(self: pointer, ): pointer {.importc: "QUndoGroup_activeStack".}
proc fcQUndoGroup_createUndoAction(self: pointer, parent: pointer): pointer {.importc: "QUndoGroup_createUndoAction".}
proc fcQUndoGroup_createRedoAction(self: pointer, parent: pointer): pointer {.importc: "QUndoGroup_createRedoAction".}
proc fcQUndoGroup_canUndo(self: pointer, ): bool {.importc: "QUndoGroup_canUndo".}
proc fcQUndoGroup_canRedo(self: pointer, ): bool {.importc: "QUndoGroup_canRedo".}
proc fcQUndoGroup_undoText(self: pointer, ): struct_miqt_string {.importc: "QUndoGroup_undoText".}
proc fcQUndoGroup_redoText(self: pointer, ): struct_miqt_string {.importc: "QUndoGroup_redoText".}
proc fcQUndoGroup_isClean(self: pointer, ): bool {.importc: "QUndoGroup_isClean".}
proc fcQUndoGroup_undo(self: pointer, ): void {.importc: "QUndoGroup_undo".}
proc fcQUndoGroup_redo(self: pointer, ): void {.importc: "QUndoGroup_redo".}
proc fcQUndoGroup_setActiveStack(self: pointer, stack: pointer): void {.importc: "QUndoGroup_setActiveStack".}
proc fcQUndoGroup_activeStackChanged(self: pointer, stack: pointer): void {.importc: "QUndoGroup_activeStackChanged".}
proc fQUndoGroup_connect_activeStackChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_activeStackChanged".}
proc fcQUndoGroup_indexChanged(self: pointer, idx: cint): void {.importc: "QUndoGroup_indexChanged".}
proc fQUndoGroup_connect_indexChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_indexChanged".}
proc fcQUndoGroup_cleanChanged(self: pointer, clean: bool): void {.importc: "QUndoGroup_cleanChanged".}
proc fQUndoGroup_connect_cleanChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_cleanChanged".}
proc fcQUndoGroup_canUndoChanged(self: pointer, canUndo: bool): void {.importc: "QUndoGroup_canUndoChanged".}
proc fQUndoGroup_connect_canUndoChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_canUndoChanged".}
proc fcQUndoGroup_canRedoChanged(self: pointer, canRedo: bool): void {.importc: "QUndoGroup_canRedoChanged".}
proc fQUndoGroup_connect_canRedoChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_canRedoChanged".}
proc fcQUndoGroup_undoTextChanged(self: pointer, undoText: struct_miqt_string): void {.importc: "QUndoGroup_undoTextChanged".}
proc fQUndoGroup_connect_undoTextChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_undoTextChanged".}
proc fcQUndoGroup_redoTextChanged(self: pointer, redoText: struct_miqt_string): void {.importc: "QUndoGroup_redoTextChanged".}
proc fQUndoGroup_connect_redoTextChanged(self: pointer, slot: int) {.importc: "QUndoGroup_connect_redoTextChanged".}
proc fcQUndoGroup_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoGroup_tr2".}
proc fcQUndoGroup_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoGroup_tr3".}
proc fcQUndoGroup_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoGroup_trUtf82".}
proc fcQUndoGroup_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoGroup_trUtf83".}
proc fcQUndoGroup_createUndoAction2(self: pointer, parent: pointer, prefix: struct_miqt_string): pointer {.importc: "QUndoGroup_createUndoAction2".}
proc fcQUndoGroup_createRedoAction2(self: pointer, parent: pointer, prefix: struct_miqt_string): pointer {.importc: "QUndoGroup_createRedoAction2".}
proc fQUndoGroup_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QUndoGroup_virtualbase_metacall".}
proc fcQUndoGroup_override_virtual_metacall(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_metacall".}
proc fQUndoGroup_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QUndoGroup_virtualbase_event".}
proc fcQUndoGroup_override_virtual_event(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_event".}
proc fQUndoGroup_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QUndoGroup_virtualbase_eventFilter".}
proc fcQUndoGroup_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_eventFilter".}
proc fQUndoGroup_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QUndoGroup_virtualbase_timerEvent".}
proc fcQUndoGroup_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_timerEvent".}
proc fQUndoGroup_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QUndoGroup_virtualbase_childEvent".}
proc fcQUndoGroup_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_childEvent".}
proc fQUndoGroup_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QUndoGroup_virtualbase_customEvent".}
proc fcQUndoGroup_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_customEvent".}
proc fQUndoGroup_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QUndoGroup_virtualbase_connectNotify".}
proc fcQUndoGroup_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_connectNotify".}
proc fQUndoGroup_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QUndoGroup_virtualbase_disconnectNotify".}
proc fcQUndoGroup_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QUndoGroup_override_virtual_disconnectNotify".}
proc fcQUndoGroup_staticMetaObject(): pointer {.importc: "QUndoGroup_staticMetaObject".}
proc fcQUndoGroup_delete(self: pointer) {.importc: "QUndoGroup_delete".}


func init*(T: type QUndoGroup, h: ptr cQUndoGroup): QUndoGroup =
  T(h: h)
proc create*(T: type QUndoGroup, ): QUndoGroup =

  QUndoGroup.init(fcQUndoGroup_new())
proc create*(T: type QUndoGroup, parent: gen_qobject.QObject): QUndoGroup =

  QUndoGroup.init(fcQUndoGroup_new2(parent.h))
proc metaObject*(self: QUndoGroup, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQUndoGroup_metaObject(self.h))

proc metacast*(self: QUndoGroup, param1: cstring): pointer =

  fcQUndoGroup_metacast(self.h, param1)

proc metacall*(self: QUndoGroup, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQUndoGroup_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QUndoGroup, s: cstring): string =

  let v_ms = fcQUndoGroup_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QUndoGroup, s: cstring): string =

  let v_ms = fcQUndoGroup_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc addStack*(self: QUndoGroup, stack: gen_qundostack.QUndoStack): void =

  fcQUndoGroup_addStack(self.h, stack.h)

proc removeStack*(self: QUndoGroup, stack: gen_qundostack.QUndoStack): void =

  fcQUndoGroup_removeStack(self.h, stack.h)

proc stacks*(self: QUndoGroup, ): seq[gen_qundostack.QUndoStack] =

  var v_ma = fcQUndoGroup_stacks(self.h)
  var vx_ret = newSeq[gen_qundostack.QUndoStack](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qundostack.QUndoStack(h: v_outCast[i])
  vx_ret

proc activeStack*(self: QUndoGroup, ): gen_qundostack.QUndoStack =

  gen_qundostack.QUndoStack(h: fcQUndoGroup_activeStack(self.h))

proc createUndoAction*(self: QUndoGroup, parent: gen_qobject.QObject): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQUndoGroup_createUndoAction(self.h, parent.h))

proc createRedoAction*(self: QUndoGroup, parent: gen_qobject.QObject): gen_qaction.QAction =

  gen_qaction.QAction(h: fcQUndoGroup_createRedoAction(self.h, parent.h))

proc canUndo*(self: QUndoGroup, ): bool =

  fcQUndoGroup_canUndo(self.h)

proc canRedo*(self: QUndoGroup, ): bool =

  fcQUndoGroup_canRedo(self.h)

proc undoText*(self: QUndoGroup, ): string =

  let v_ms = fcQUndoGroup_undoText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc redoText*(self: QUndoGroup, ): string =

  let v_ms = fcQUndoGroup_redoText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc isClean*(self: QUndoGroup, ): bool =

  fcQUndoGroup_isClean(self.h)

proc undo*(self: QUndoGroup, ): void =

  fcQUndoGroup_undo(self.h)

proc redo*(self: QUndoGroup, ): void =

  fcQUndoGroup_redo(self.h)

proc setActiveStack*(self: QUndoGroup, stack: gen_qundostack.QUndoStack): void =

  fcQUndoGroup_setActiveStack(self.h, stack.h)

proc activeStackChanged*(self: QUndoGroup, stack: gen_qundostack.QUndoStack): void =

  fcQUndoGroup_activeStackChanged(self.h, stack.h)

proc miqt_exec_callback_QUndoGroup_activeStackChanged(slot: int, stack: pointer) {.exportc.} =
  type Cb = proc(stack: gen_qundostack.QUndoStack)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = gen_qundostack.QUndoStack(h: stack)


  nimfunc[](slotval1)

proc onactiveStackChanged*(self: QUndoGroup, slot: proc(stack: gen_qundostack.QUndoStack)) =
  type Cb = proc(stack: gen_qundostack.QUndoStack)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQUndoGroup_connect_activeStackChanged(self.h, cast[int](addr tmp[]))
proc indexChanged*(self: QUndoGroup, idx: cint): void =

  fcQUndoGroup_indexChanged(self.h, idx)

proc miqt_exec_callback_QUndoGroup_indexChanged(slot: int, idx: cint) {.exportc.} =
  type Cb = proc(idx: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = idx


  nimfunc[](slotval1)
